2003-09-15  Geert Stappers

	* rivet.xml
	new file, added to reproduce #122126

2003-09-15  Geert Stappers

	* Create this examples/crash directory with a README and ChangeLog.