@@ -1,3 +1,8 @@
+2003-09-16  Geert Stappers
+
+	* septentrio.xml
+	new file, added to reproduce #122417
+
 2003-09-15  Geert Stappers
 
 	* rivet.xml
